force-app/main/default/Objects/ContractText__c/ContractText__c.object-meta.xml
<CustomObject>
    <description>Provides base text for each part of a contract</description>
    <label>Contract Text</label>
    <nameField>
        <label>Contract Text Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Text</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>