force-app/main/default/Objects/ContractText__c/fields/Amendment__c.field-meta.xml
<CustomField>
    <fullName>Amendment__c</fullName>
    <description>Section of contract entitled Amendment</description>
    <inlineHelpText>Section of contract entitled Amendment</inlineHelpText>
    <label>Amendment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>