force-app/main/default/Objects/ContractText__c/fields/ApplicableLaw__c.field-meta.xml
<CustomField>
    <fullName>ApplicableLaw__c</fullName>
    <description>Text for section of contract entitled Applicable Law</description>
    <inlineHelpText>Text for section of contract entitled Applicable Law</inlineHelpText>
    <label>Applicable Law</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>