force-app/main/default/Objects/ContractText__c/fields/Associates__c.field-meta.xml
<CustomField>
    <fullName>Associates__c</fullName>
    <description>Section of contract entitled Associates</description>
    <inlineHelpText>Section of contract entitled Associates</inlineHelpText>
    <label>Associates</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>