force-app/main/default/Objects/ContractText__c/fields/Confidentiality__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality__c</fullName>
    <description>Section of contract entitled Confidentiality</description>
    <inlineHelpText>Section of contract entitled Confidentiality</inlineHelpText>
    <label>Confidentiality</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>