force-app/main/default/Objects/ContractText__c/fields/ConfidentialityAfterTermination__c.field-meta.xml
<CustomField>
    <fullName>ConfidentialityAfterTermination__c</fullName>
    <description>Section of contract entitled Confidentiality After Termination</description>
    <inlineHelpText>Section of contract entitled Confidentiality After Termination</inlineHelpText>
    <label>Confidentiality After Termination</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>