force-app/main/default/Objects/ContractText__c/fields/Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Disclosure__c</fullName>
    <description>Section of contract entitled Disclosure</description>
    <inlineHelpText>Section of contract entitled Disclosure</inlineHelpText>
    <label>Disclosure</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>