force-app/main/default/Objects/ContractText__c/fields/EntireAgreement__c.field-meta.xml
<CustomField>
    <fullName>EntireAgreement__c</fullName>
    <description>Section of contract entitled Entire Agreement</description>
    <inlineHelpText>Section of contract entitled Entire Agreement</inlineHelpText>
    <label>Entire Agreement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>