force-app/main/default/Objects/ContractText__c/fields/ExpenseReimbursement__c.field-meta.xml
<CustomField>
    <fullName>ExpenseReimbursement__c</fullName>
    <description>Section of contract entitled Expense Reimbursement</description>
    <inlineHelpText>Section of contract entitled Expense Reimbursement</inlineHelpText>
    <label>Expense Reimbursement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>