force-app/main/default/Objects/ContractText__c/fields/InterruptionOfService__c.field-meta.xml
<CustomField>
    <fullName>InterruptionOfService__c</fullName>
    <description>Text for section of contract entitled Interruption of Service</description>
    <inlineHelpText>Text for section of contract entitled Interruption of Service</inlineHelpText>
    <label>Interruption of Service</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>