force-app/main/default/Objects/ContractText__c/fields/Notices__c.field-meta.xml
<CustomField>
    <fullName>Notices__c</fullName>
    <description>Section of contract entitled Notices</description>
    <inlineHelpText>Section of contract entitled Notices</inlineHelpText>
    <label>Notices</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>