force-app/main/default/Objects/ContractText__c/fields/Opening__c.field-meta.xml
<CustomField>
    <fullName>Opening__c</fullName>
    <description>First paragraph of the contract</description>
    <inlineHelpText>First paragraph of the contract</inlineHelpText>
    <label>Opening</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>