force-app/main/default/Objects/ContractText__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <description>Section of contract entitled Payment</description>
    <inlineHelpText>Section of contract entitled Payment</inlineHelpText>
    <label>Payment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>