force-app/main/default/Objects/ContractText__c/fields/PerformanceOfServices__c.field-meta.xml
<CustomField>
    <fullName>PerformanceOfServices__c</fullName>
    <description>Section of contract entitled Performance of Services</description>
    <inlineHelpText>Section of contract entitled Performance of Services</inlineHelpText>
    <label>Performance of Services</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>