force-app/main/default/Objects/ContractText__c/fields/RelationshipOfParties__c.field-meta.xml
<CustomField>
    <fullName>RelationshipOfParties__c</fullName>
    <description>Section of contract entitled Relationship of Parties</description>
    <inlineHelpText>Section of contract entitled Relationship of Parties</inlineHelpText>
    <label>Relationship of Parties</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>