force-app/main/default/Objects/ContractText__c/fields/Severability__c.field-meta.xml
<CustomField>
    <fullName>Severability__c</fullName>
    <description>Text for section of contract entitled Severability</description>
    <inlineHelpText>Text for section of contract entitled Severability</inlineHelpText>
    <label>Severability</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>