force-app/main/default/Objects/ContractText__c/fields/Signatories__c.field-meta.xml
<CustomField>
    <fullName>Signatories__c</fullName>
    <description>Text for section of contract entitled Signatories</description>
    <inlineHelpText>Text for section of contract entitled Signatories</inlineHelpText>
    <label>Signatories</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>