force-app/main/default/Objects/ContractText__c/fields/TermTermination__c.field-meta.xml
<CustomField>
    <fullName>TermTermination__c</fullName>
    <description>Section of contract entitled Term/Termination</description>
    <inlineHelpText>Section of contract entitled Term/Termination</inlineHelpText>
    <label>Term/Termination</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>