force-app/main/default/Objects/ContractText__c/fields/WaiverOfContractualRight__c.field-meta.xml
<CustomField>
    <fullName>WaiverOfContractualRight__c</fullName>
    <description>Text for section of contract entitled Waiver Of Contractual Right</description>
    <inlineHelpText>Text for section of contract entitled Waiver Of Contractual Right</inlineHelpText>
    <label>Waiver Of Contractual Right</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>